Added Account Deletion page

--- a/src/app/pages/delete-account/delete-account.component.html
+++ b/src/app/pages/delete-account/delete-account.component.html
@@ -1,10 +1,9 @@
 <div class="spotbie-main-holder" id="spotbieMainHolder">
   <div class="spotbie-overlay-window" id="spotbieMainSpotBieScroll">
-    <div #featureWrapper>
+    <div>
       <div>
         <table
           class="spotbie-el-100 spotbie-menu spotbie-menu-fixed"
-          #spotbieMainMenu
         >
           <tr>
             <td style="width: 25%">
@@ -23,91 +22,37 @@
         <div class="menu-padding"></div>
 
         <div class="does-itWork">
-          <h2 class="sb-text-light-green-gradient">BUSINESS PLATFORM</h2>
-          <h2 class="spotbie-text-gradient">HOW DOES IT WORK</h2>
+          <h2 class="sb-text-light-green-gradient">DELETE YOUR ACCOUNT & DATA</h2>
 
           <h2 class="sb-text-light-green-gradient mt-5">
-            Sign Up to Our Platform...
+            Overview...
           </h2>
           <p>
-            You will be able to set your restaurant's or retail store's location
-            along with your categories, store description, and store name. After
-            you confirm your account, you will be able to upload rewards and
-            start awarding your users.
+            In this page we'll cover ways in which you can delete your account from the SpotBie platform. When deleting
+            your account you have three options;
           </p>
 
-          <h2 class="sb-text-light-green-gradient mt-5">Local Exposure</h2>
+          <h2 class="sb-text-light-green-gradient mt-5">1. Permanent Deletion</h2>
           <p>
-            Your business will be listed in our platform to users who are ready
-            to spend. SpotBie users open the SpotBie app because they are ready to
-            go to the next step in the sales funnel; and that is making the
-            purchase. It's just a question of where they will go now. We
-            advertise our local SpotBie Community Members at different times and
-            locations. You won't have to worry about managing your ad campaigns
-            with us.
+            This is a irreversible action and it means that you will not be able to recover your account. Your loyalty
+            points, rewards, places visited, (e.g., all data associated with your unique account identifier will be
+            permanently deleted). If you want to permanently delete your account, you can do so under the settings section
+            of our website.
           </p>
 
-          <h2 class="sb-text-light-green-gradient mt-5">Loyalty Points</h2>
+          <h2 class="sb-text-light-green-gradient mt-5">2. Temporary Deletion</h2>
           <p>
-            Our users claim Loyalty Points by making purchases at SpotBie
-            Community Member locations. SpotBie users can then claim rewards
-            once they have enough points.
+            If for some reason you'd like to delete your SpotBie account temporarily and gain access to it later,
+            you'll be able to do so by simply navigating to settings and tapping on "Deactivate Account" as shown in this
+            screenshot.
           </p>
 
-          <h2 class="sb-text-light-green-gradient mt-5">Upload Rewards</h2>
+          <h2 class="sb-text-light-green-gradient mt-5">3. Delete Account Data</h2>
           <p>
-            As the business owner you can upload the best of your menu items
-            onto your digital rewards menu to entice your audience. Each reward
-            you upload can also carry a minimum spend policy (how much users
-            must spend in order to redeem this reward).
-          </p>
-
-          <h2 class="sb-text-light-green-gradient mt-5">
-            In-Platform Advertising
-          </h2>
-          <p>
-            As part of your membership, you will receive a new in-app Ad design
-            every six months. Everyone gets a fair chance for the spot-light in
-            our app. Our algorithm assigns SpotBie Community Members Exposure in
-            a systematic manner so that all of them get the same amount of
-            views.
-          </p>
-
-          <h2 class="sb-text-light-green-gradient mt-5">Redeeming Rewards</h2>
-          <p>
-            Users that go into your business can claim any of the rewards that
-            you've listed on your menu as long as they have the Loyalty Point
-            balance for it. Additionally, users might be required to gain accesss
-            to loyalty tiers before they can redeem certain rewards. This is a great tool
-            for your business to thank your most frequent guests with the more exclusive rewards.
-          </p>
-
-          <h2 class="sb-text-light-green-gradient mt-5">Award Users</h2>
-          <p>
-            Award your guests with Loyalty Points at check-out. Simply enter
-            their bill value and the SpotBie app will generate a QR code for
-            them to scan. After they scan the QR code, the points will be
-            transferred to their account.
-          </p>
-
-          <h2 class="sb-text-light-green-gradient mt-5">Questions?</h2>
-          <p>
-            Don't hesitate to call! Simply dial +1 (786) 600-5946 and we'll take
-            your request!
+            SpotBie also allows users to delete their account data without deleting their account, simply e-mail or call us
+            and we will gladly take care of this for you.
           </p>
         </div>
-
-        <!--       <div class='spotbie-overlay-window' style="z-index: 99;" *ngIf="false">
-          <div class='sb-v-wrapper' style="display: grid; align-content: center;">
-
-            &lt;!&ndash; Calendly inline widget begin &ndash;&gt;
-            <div id="calendlyEl" class="calendly-inline-widget"></div>
-            &lt;!&ndash; Calendly inline widget end &ndash;&gt;
-
-            <div class='spotbie-text-gradient text-center text-uppercase mt-4'
-                 style="cursor: pointer;" (click)="calendly()">CLOSE</div>
-          </div>
-        </div>-->
 
         <div class="mb-4 sb-readImage" id="sbReadImageUsers"></div>
 
@@ -116,7 +61,7 @@
 
           <img class="mt-3 mb-3" src="../../../assets/images/logo_spotbie_green.svg" />
 
-          <p [routerLink]="['/terms']">SpotBie, LLC.&copy; Copyright 2023</p>
+          <p [routerLink]="['/terms']">SpotBie, LLC.&copy; Copyright 2024-25</p>
 
           <div class="mt-4">
             <i class="fab fa-instagram" (click)="openIg()"></i>
