ADDED delete account option

--- a/src/app/pages/delete-account/delete-account.component.css
+++ b/src/app/pages/delete-account/delete-account.component.css
@@ -58,6 +58,11 @@
 h6 {
   font-size: 1rem !important;
 }
+
+.delete-account-image {
+  max-width: 750px;
+}
+
 #spotbieMainSpotBieScroll {
   overflow-y: scroll;
   width: 100%;
