--- a/src/app/pages/delete-account/delete-account.component.html
+++ b/src/app/pages/delete-account/delete-account.component.html
@@ -32,20 +32,24 @@
             your account you have three options;
           </p>
 
-          <h2 class="sb-text-light-green-gradient mt-5">1. Permanent Deletion</h2>
-          <p>
-            This is a irreversible action and it means that you will not be able to recover your account. Your loyalty
-            points, rewards, places visited, (e.g., all data associated with your unique account identifier will be
-            permanently deleted). If you want to permanently delete your account, you can do so under the settings section
-            of our website.
-          </p>
-
-          <h2 class="sb-text-light-green-gradient mt-5">2. Temporary Deletion</h2>
+          <h2 class="sb-text-light-green-gradient mt-5">1. Temporary Deletion</h2>
           <p>
             If for some reason you'd like to delete your SpotBie account temporarily and gain access to it later,
             you'll be able to do so by simply navigating to settings and tapping on "Deactivate Account" as shown in this
             screenshot.
           </p>
+
+          <img class="delete-account-image mt-4" src="../../../assets/images/data-deletion/deactivate_account.png" />
+
+          <h2 class="sb-text-light-green-gradient mt-5">2. Permanent Deletion</h2>
+          <p>
+            This is a irreversible action and it means that you will not be able to recover your account. Your loyalty
+            points, rewards, places visited, (e.g., all data associated with your unique account identifier will be
+            permanently unlinked). If you want to permanently delete your account, you can do so under the settings section
+            of our website.
+          </p>
+
+          <img class="delete-account-image mt-4" src="../../../assets/images/data-deletion/deactivate_account_permanent.png" />
 
           <h2 class="sb-text-light-green-gradient mt-5">3. Delete Account Data</h2>
           <p>
